# biota

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
examples/: experiments-v2.2.0-cluster.yaml  experiments-v2.4.0-cluster.yaml  experiments-v3.4.0-mps.yaml  search-cluster-run.sh  suggested-pairs-exp.yaml
scripts/: build_index.py  cluster_install.sh  gpu_profile.py  render_creature.py  render_rollout.py  smoke_ecosystem.sh  smoke_search.sh  suggest_signal_pairs.py  view_archive.py
src/biota/: __init__.py  cli.py  ray_compat.py
src/biota/ecosystem/: __init__.py  analytics.py  config.py  dispatch.py  interaction.py  result.py  run.py  spawn.py
src/biota/search/: archive.py  descriptors.py  loop.py  params.py  quality.py  result.py  rollout.py
src/biota/sim/: flowlenia.py  localized.py
src/biota/viz/: __init__.py  colormap.py  render.py  tty.py
src/biota/viz/templates/: archive.html  ecosystem.html  index.html  stats_section.css  stats_section.html
tests/: test_cli.py  test_imports.py  test_signal.py
tests/ecosystem/: test_analytics.py  test_config.py  test_dispatch.py  test_ecosystem.py  test_interaction.py
tests/search/: test_archive.py  test_descriptor_registry.py  test_descriptors.py  test_loop.py  test_params.py  test_quality.py  test_ray_compat.py  test_result.py  test_rollout.py
tests/sim/: test_jax_reference_match.py  test_localized.py  test_mass_conservation.py
tests/sim/fixtures/: generate_jax_reference.py
tests/sim/fixtures/jax_reference/: initial_state.npy  mass_per_step.npy  metadata.json  params.json  state_step_1.npy  state_step_10.npy  state_step_100.npy  state_step_1000.npy  state_step_500.npy
