[project]
name = "biota"
version = "0.0.1"
description = "Distributed QD search over FlowLenia"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.0",
    "torch>=2.11",
    "ray>=2.54",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=14",
    "imageio>=2.36",
    "imageio-ffmpeg>=0.5",
    "typer>=0.15",
    "rich>=13",
]

[project.scripts]
biota = "biota.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1.390",
]

[build-system]
requires = ["uv_build>=0.5"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "biota"
module-root = "src"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"src/biota/sim/*.py" = ["N803", "N806", "N812"]
"tests/sim/*.py" = ["N803", "N806"]
"tests/search/*.py" = ["N803", "N806"]
"scripts/*.py" = ["N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
exclude = ["tests/sim/fixtures"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportConstantRedefinition = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--strict-config"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:ray.*",
]
